--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -2,11 +2,11 @@ applications:
 - name: tracker-backlog
   path: ./applications/backlog-server/build/libs/backlog-server.jar
   routes:
-  - route: backlog-pal-sudha
+  - route: backlog-pal-sudha.panda
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-sudha
+    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-sudha.panda
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-backlog-database
