--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -2,7 +2,7 @@ applications:
 - name: tracker-registration
   path: ./applications/registration-server/build/libs/registration-server.jar
   routes:
-  - route: registration-pal-sudha.panda
+  - route: registration-pal-sudha.io
   memory: 1G
   instances: 1
   env:
