--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ buildscript {
         junitVersion = "4.12"
         okhttpVersion = "3.12.0"
         jsonPathVersion = "2.4.0"
+
+        springCloudVersion = "Finchley.SR2"
+        springCloudServicesClientLibrariesVersion = "2.0.2.RELEASE"
+        springCloudCommonsVersion = "2.0.0.RELEASE"
     }
 
     repositories {
@@ -28,7 +32,16 @@ buildscript {
     }
 }
 
+
 apply plugin: DependenciesGraphPlugin
+
+
+
+repositories {
+    maven {
+        url "https://repo.spring.io/plugins-release"
+    }
+}
 
 subprojects {
     group "io.pivotal.pal.tracker"
