--- a/applications/backlog-server/src/main/resources/application.properties
+++ b/applications/backlog-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 server.port=8082
 spring.datasource.username=tracker
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker_backlog_dev?useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false
-registration.server.endpoint=http://registration-server
+registration.server.endpoint=http://registration-pal-sudha.cfapps.io
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=info,health,metrics,circuitbreakers,env,refresh,loggers
 management.health.circuitbreakers.enabled: true
